Fix options scrollbars on Windows and some Macs

--- a/etc/options.css
+++ b/etc/options.css
@@ -9,8 +9,8 @@ body {
 	font-family: Oxygen, Helvetica, Arial, sans-serif !important;
 	margin-left: 10px;
 	margin-right: 10px;
-	padding-top: 80px;
-	padding-bottom: 10px;
+	padding-top: 70px;
+	padding-bottom: 0;
 }
 
 h3 {
